# solemnsky

./: .gitignore  .gitmodules  .travis.yaml  .travis.yml  CMakeLists.txt  README.md  check-results  codeStyleSettings.xml  cppcheck.sh  default.nix  flake.nix  header.cpp  log  remove.sh  rename.sh  solemnsky.cbp  tests.sh
backup/environments/: export.sh
backup/environments/export/: asteroids.sky  funnelpark.sky
docs/: README.md  client.md  engine.md  server.md
docs/manual/: README.md  engine.md  server.md
docs/status/: current.md
docs/uml/: test.mdj
docs/uml-src/: client.graphml  sky.mdj
docs/uml/src/: client.graphml  sky.graphml
environments/export/: demo.sky
environments/src/asteroids/: map.json
environments/src/funnelpark/: map.json
export/linux/: README.md
export/osx/: README.md
export/windows/: README.md
src/: .ycm_extra_conf.py  main.cpp  servmain.cpp  solemnsky_client.cpp
src/base/: base.h  control.cpp  control.h  ctrl.cpp  ctrl.h  packer.cpp  packer.h  physics.h  profile.cpp  profile.h  profiler.cpp  profiler.h  resources.cpp  resources.h  sysutil.cpp  sysutil.h  ui.h  util.cpp  util.h  value.cpp  value.h
src/base/ui/: button.cpp  button.h
src/client/: client.cpp  client.h  client.hpp  clientstate.cpp  clientstate.h  game.cpp  game.h  gamecontroller.cpp  gamecontroller.h  gamepage.cpp  gamepage.h  homepage.cpp  homepage.h  homepage.hpp  listingpage.cpp  listingpage.h  listingpage.hpp  main.cpp  page.h  pageselector.cpp  pageselector.h  settingspage.cpp  settingspage.h  settingspage.hpp  skyrender.cpp  skyrender.h  skyrender.hpp  tabselector.cpp  tabselector.h
src/client/demo/: demo.cpp  demo.h  graphicsdemo.cpp  physdemo.cpp  skydemo.cpp  skydemo.h
src/client/elements/: clientshared.cpp  clientshared.h  clientshared.hpp  clientui.cpp  clientui.hpp  elements.cpp  elements.h  elements.hpp  event.cpp  event.h  settings.cpp  settings.h  settings.hpp  style.cpp  style.h  style.hpp
src/client/engine/: clientreconciler.cpp  clientreconciler.hpp  skydeltacache.cpp  skydeltacache.hpp  skyrender.hpp
src/client/game/: game.h  gamecontroller.cpp  gamecontroller.h  gamecontrols.cpp  gamecontrols.h  multiplayerclient.cpp  multiplayerclient.h  tutorial.cpp  tutorial.h
src/client/multiplayer/: multiplayer.cpp  multiplayer.h  multiplayer.hpp  multiplayerclient.cpp  multiplayerclient.h  multiplayercore.cpp  multiplayercore.h  multiplayercore.hpp  multiplayergame.cpp  multiplayergame.h  multiplayergame.hpp  multiplayergamehandle.cpp  multiplayergamehandle.hpp  multiplayerloader.cpp  multiplayerloader.hpp  multiplayerlobby.cpp  multiplayerlobby.h  multiplayerlobby.hpp  multiplayerscoring.cpp  multiplayerscoring.h  multiplayerscoring.hpp  multiplayershared.cpp  multiplayershared.h  multiplayersplash.cpp  multiplayersplash.hpp  multiplayerui.cpp  multiplayerui.h
src/client/render/: render.cpp  render.h
src/client/sandbox/: sandbox.cpp  sandbox.h  sandbox.hpp
src/client/subsystem/: render.cpp  render.h
src/client/tutorial/: gamecontrols.cpp  gamecontrols.h  tutorial.cpp  tutorial.h
src/client/ui/: control.cpp  control.h  frame.cpp  frame.h  profiler.cpp  profiler.h  sheet.cpp  sheet.h  signal.h  splash.cpp  splash.h  text.cpp  text.h  textprop.h
src/client/util/: resources.cpp  resources.h  sfmlutil.cpp  sfmlutil.h
src/ctrl/: ctrl.cpp  ctrl.h  log.cpp  log.h  profile.cpp  profile.h
src/demo/: demo.cpp  demo.h  enginedemo.cpp  enginedemo.h  graphics.cpp  graphics.h  graphicsdemo.cpp  graphicsdemo.h  physdemo.cpp  physdemo.h  skydemo.cpp  skydemo.h
src/engine/: arena.cpp  arena.hpp  debugview.cpp  debugview.hpp  engine.cpp  engine.h  event.cpp  event.hpp  flight.cpp  flight.h  flowcontrol.cpp  flowcontrol.hpp  graphics.cpp  graphics.h  multimedia.cpp  multimedia.hpp  physics.cpp  physics.h  player.cpp  player.hpp  protocol.cpp  protocol.hpp  role.cpp  role.hpp  scoreboard.cpp  scoreboard.hpp  types.cpp  types.hpp
src/engine/environment/: envgraphics.cpp  envgraphics.hpp  environment.cpp  environment.hpp  envscripts.cpp  envscripts.hpp  map.cpp  map.hpp  mechanics.cpp  mechanics.hpp  visuals.cpp  visuals.hpp
src/pack/: pack.cpp  pack.h  packet.cpp  packet.h  telegraphy.cpp  telegraphy.h
src/server/: console.cpp  console.h  latencytracker.cpp  latencytracker.h  latencytracker.hpp  main.cpp  server.cpp  server.h  server.hpp  servershared.cpp  servershared.hpp  skyinputmanager.cpp  skyinputmanager.hpp
src/sky/: action.cpp  action.h  arena.cpp  arena.h  arena.hpp  debuginfo.cpp  debuginfo.h  debugview.cpp  debugview.hpp  delta.cpp  delta.h  environment.cpp  environment.hpp  event.cpp  event.h  event.hpp  flight.cpp  flight.h  graphics.cpp  graphics.h  map.cpp  map.h  map.hpp  participation.cpp  participation.h  physics.cpp  physics.h  physics.hpp  plane.cpp  plane.h  planestate.cpp  planestate.h  prop.cpp  prop.h  prop.hpp  props.cpp  props.h  protocol.cpp  protocol.h  protocol.hpp  (+16 more)
src/telegraph/: pack.cpp  pack.h  packet.cpp  packet.h  telegraph.cpp  telegraph.h
src/ui/: control.cpp  control.h  control.hpp  frame.cpp  frame.h  frame.hpp  inputaction.cpp  inputaction.hpp  profiler.cpp  profiler.h  resources.cpp  resources.h  resources.hpp  settings.cpp  settings.hpp  sheet.cpp  sheet.h  sheet.hpp  signal.cpp  signal.h  splash.cpp  splash.h  splash.hpp  text.cpp  text.h  text.hpp  ui.h  widgets.hpp  wrapper.cpp  wrapper.h
src/util/: archive.cpp  archive.hpp  clientutil.cpp  clientutil.h  clientutil.hpp  filepath.cpp  filepath.hpp  inputaction.cpp  inputaction.hpp  methods.cpp  methods.h  methods.hpp  networked.hpp  networkedmap.hpp  packer.cpp  packer.h  printer.cpp  printer.h  printer.hpp  telegraph.cpp  telegraph.h  telegraph.hpp  threads.h  threads.hpp  types.cpp  types.h  types.hpp  util.cpp  util.h
tests/: CMakeLists.txt  archivetest.cpp  arenatest.cpp  environmenttest.cpp  flowtest.cpp  moortest.cpp  packtest.cpp  protocoltest.cpp  scoreboardtest.cpp  skyhandletest.cpp  skytest.cpp  subsystemtest.cpp  telegraph.cpp  telegraphtest.cpp  test.tar  threadtest.cpp  transformtest.cpp  utiltest.cpp
util/: docker.sh  status.sh
(+117 files in other folders)
